fixed the z-index

--- a/src/components/catalog/keyboard/CatalogKeymap.scss
+++ b/src/components/catalog/keyboard/CatalogKeymap.scss
@@ -115,7 +115,7 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
-      z-index: 1;
+      z-index: 3;
       div {
         margin-right: 8px;
       }
